[project]
name = "bioview-common"
version = "0.9.3.8"
description = "A collection of common configuration and protocol specification for BioView clients and servers"
authors = [
    {name = "Aakash Kapoor",email = "113218196+meowkash@users.noreply.github.com"}
]
license = {text = "GPL-v3"}
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "bioview_common"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pre-commit = "^4.3.0"
ruff = "^0.12.8"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 89
target-version = "py38"
extend-exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    ".venv"
]

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default
# Plus isort (`I`) for import sorting
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C90"]
ignore = [
    "E203",  # whitespace before ':'
]

# Allow fix for all enabled rules (when `--fix`) is provided
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["your_package"]  # Replace with your actual package name
force-single-line = false
force-sort-within-sections = false
lines-after-imports = 2

[tool.ruff.format]
# Like Black, use double quotes for strings
quote-style = "double"
# Like Black, indent with spaces, rather than tabs
indent-style = "space"
# Like Black, respect magic trailing commas
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending
line-ending = "auto"
